--- a/app/src/main/res/layout/vehicle_item.xml
+++ b/app/src/main/res/layout/vehicle_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:alpha="0.5"
         android:maxLines="1"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="@color/text_color"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.5"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="@color/text_color"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
